# brain-inspired-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_RELEASE_GUIDE.md  LICENSE  QUICK_GITHUB_SETUP.md  README.md  __init__.py  best_brain_ai_model.pth  core_architecture.py  create_repo.json  demo_framework.py  improved_training.py  interactive_tutorial.py  learning_mechanisms.py  popularity_boost.py  pyproject.toml  quick_demo.py  real_training.py  release_body.json  release_to_github.sh  requirements.txt  setup.py  setup_github_profile.py  simple_demo.py  test_model.py  training_demo.py  visual_interface.py
boost_materials/: community_engagement.json  complete_boost_plan.json  outreach_materials.json  seo_content.json  social_media_content.json  viral_content.json
cleanup_materials/: analysis.json  cleanup_plan.md  deletion_commands.sh
nexus/: __init__.py  config.py
nexus/data/: dataset.py  preprocessing.py  real_datasets.py  synthetic.py
nexus/inference/: __init__.py  engine.py  quantize.py  (+1 more)
profile_setup/: README.md  badges.json  permanent_deletion_guide.md  pinned_repos.json  quick_cleanup_guide.md  quick_deletion_commands.txt  quick_setup_commands.sh  repository_topics.json  setup_guide.md  simple_cleanup.py  social_links.json  topics_for_repos.txt
scripts/: benchmark.py  demo.py  evaluate.py  titan_demo.py  train.py
tests/: test_attention.py  test_mcts.py  test_memory.py  test_model.py  test_moe.py  test_smart_neuron.py  test_ssm.py  test_thought_engine.py  test_titan.py  test_tokenizer.py
titan/: __init__.py  config.py  model.py  param_budget.py
(+49 files in other folders)
